--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,11 @@ flutter:
     - assets/bookimages/destroyed-souls-1.jpeg
     - assets/bookimages/wiccacreed-2.jpeg
 
+    - assets/bookimages/currently.png
+    - assets/bookimages/homescreen.png
+    - assets/bookimages/menü.png
+    - assets/bookimages/profil.png
+
   fonts:
     - family: DancingScript
       fonts:
